--- a/README.hbs
+++ b/README.hbs
@@ -44,6 +44,9 @@ client.on('connect', (client) => {
 client.on('update', (updatedProperties, properties) => {
     console.log(updatedProperties, properties);
 });
+client.on('no_response', () => {
+    console.log('no response');
+});
 
 ```
 
